# Raytracer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Raytracer.sln  cloc.bat
Assets/Shaders/: CubemapUtils.hlsli  Depth2D.hlsl  DepthCubemap.hlsl  Opaque.hlsl  buffer.hlsl  depth.hlsl  emission.hlsl  globals.hlsl  hologram.hlsl  iblDiffuse.hlsl  iblReflectance.hlsl  iblReflection.hlsl  iblSpecular.hlsl  indices.hlsli  normalVisualization.hlsl  opaque.hlsl  resolve.hlsl  samplers.hlsli  sky.hlsl  task3.hlsl  task3_1.hlsl  test.hlsl  test1.hlsl  texture_only.hlsl
CheatSheet/: MathCheatSheet.MD
ConsoleLib/: ConsoleLib.sln  ConsoleLib.vcxproj  ConsoleLib.vcxproj.filters
ConsoleLib/src/: ConsoleLib.h
Engine/: Engine.vcxproj  Engine.vcxproj.filters
Engine/src/: Flame.h
Project/: Application.h  Project.vcxproj  Project.vcxproj.filters
Project/source/: Main.cpp
Project/src/: Application.cpp  Application.h  Main.cpp  MainLayer.cpp  MainLayer.h  MainScene.cpp  MainScene.h
Raytracer/: Main.cpp  Raytracer.vcxproj
scripts/: cloc.bat  includes.sh
src/ConsoleLib/: CMakeLists.txt
src/ConsoleLib/ConsoleLib/: Console.cpp  Console.h
src/Engine/: CMakeLists.txt  Flame.h
src/Engine/Flame/camera/: AlignedCamera.cpp  AlignedCamera.h  CameraController.h  SpaceshipCamera.cpp  SpaceshipCamera.h
src/Engine/Flame/components/: Transform.cpp
src/Engine/Flame/engine/: Engine.cpp  Engine.h  HologramGroup.cpp  HologramGroup.h  IShadowMapProvider.cpp  IShadowMapProvider.h  LightSystem.cpp  LightSystem.h  Mesh.h  MeshBvh.cpp  MeshBvh.h  MeshSystem.cpp  MeshSystem.h  Model.cpp  Model.h  ModelManager.cpp  ModelManager.h  OpaqueGroup.cpp  OpaqueGroup.h  ReflectionCapture.cpp  ReflectionCapture.h  ShaderManager.cpp  ShaderManager.h  ShaderPipeline.cpp  ShaderPipeline.h  ShaderType.cpp  ShaderType.h  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h  Transform.cpp  Transform.h  TransformSystem.cpp  TransformSystem.h
src/Engine/Flame/engine/lights/: DirectLight.h  PointLight.h  SpotLight.h
src/Engine/Flame/graphics/: DxContext.cpp  DxContext.h  DxRenderer.cpp  DxRenderer.h  Framebuffer.h  Material.h  PostProcess.cpp  PostProcess.h  Renderer.cpp  Renderer.h  Vertex.h
src/Engine/Flame/graphics/buffers/: CBufferIndices.cpp  CBufferIndices.h  ConstantBuffer.h  IndexBuffer.cpp  IndexBuffer.h  VertexBuffer.h
src/Engine/Flame/graphics/buffers/data/: DepthCubemapData.cpp  DepthCubemapData.h  PerFrame.cpp  PerFrame.h  PerView.cpp  PerView.h
src/Engine/Flame/graphics/groups/: EmissionOnlyGroup.cpp  EmissionOnlyGroup.h  HologramGroup.cpp  HologramGroup.h  OpaqueGroup.cpp  OpaqueGroup.h  ShaderGroup.h  TesselationGroup.h  TextureOnlyGroup.cpp  TextureOnlyGroup.h
src/Engine/Flame/graphics/shaders/: DomainShader.cpp  DomainShader.h  GeometryShader.cpp  GeometryShader.h  HullShader.cpp  HullShader.h  PixelShader.cpp  VertexShader.cpp  VertexShader.h
src/Engine/Flame/layers/: Scene.cpp  Scene.h  SceneOld.cpp  SceneOld.h
src/Engine/Flame/math/: Aabb.cpp  Aabb.h  AabbOld.cpp  AabbOld.h  Bvh.h  BvhOld.cpp  BvhOld.h  HitRecord.h  HitRecordOld.h  IHitable.h  MathUtils.h  Mesh.cpp  MeshData.h  MeshOld.cpp  MeshOld.h  Plane.cpp  Plane.h  Sphere.cpp  Sphere.h  TriangleOld.cpp  TriangleOld.h
src/Engine/Flame/objects/: MeshObject.cpp  MeshObject.h  PlaneObject.cpp  PlaneObject.h  SphereObject.cpp  SphereObject.h  TriangleObject.cpp  TriangleObject.h
src/Engine/Flame/render/: AlignedCamera.h  Camera.h  DxContext.h  DxRenderer.cpp  DxRenderer.h  Renderer.h  SpaceshipCamera.h
src/Engine/Flame/systems/: Aabb.cpp  CameraController.cpp  ConstantBuffer.cpp  ConstantBuffer.h  Engine.h  HitRecord.h  HologramGroup.h  IndexBuffer.h  Mesh.h  MeshBvh.h  MeshSystem.cpp  MeshSystem.h  Model.h  OpaqueGroup.h  PixelShader.cpp  PixelShader.h  VertexBuffer.cpp  VertexBuffer.h  VertexShader.cpp
src/Engine/Flame/utils/: ObjUtils.h  ParallelExecutor.cpp  ParallelExecutor.h  PpmImage.h  PtrProxy.h  Random.h  ScopeTimer.h  SolidVector.h
src/Engine/Flame/utils/draggers/: IDragger.h
src/Engine/Flame/window/: InputSystem.cpp  Window.cpp  Window.h
src/Engine/Flame/window/events/: MouseMoveWindowEvent.h  WindowEvent.h
src/Project/: Application.cpp  Application.h  CMakeLists.txt  Main.cpp  MainScene.cpp  MainScene.h
(+129 files in other folders)
